--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.6.0",
+    "@clerk/astro": "^2.13.3",
     "@marker.io/browser": "^0.20.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.13",
